--- a/product-detail.html
+++ b/product-detail.html
@@ -176,7 +176,7 @@
                             <div class="img-center-list">
                                 <div class="img-center-item">
                                     <img src="https://cdn.shopify.com/s/files/1/1933/0009/products/22S2279-HPMSH_valentina-small-hobo_marshmallow_A_250x250@2x.jpg?v=1650574940"
-                                alt="">
+                                        alt="">
                                 </div>
                                 <div class="img-center-item">
                                     <img src="https://cdn.shopify.com/s/files/1/1933/0009/products/22S2279-HPMSH_valentina-small-hobo_marshmallow_B_1024x1024.jpg?v=1652800579"
@@ -332,7 +332,83 @@
                     </ul>
                 </div>
 
+                <div class="product-review">
+                    <div class="review-title">
+                        <h4>Customer review</h4>
+                    </div>
+                    <div class="write-to-button">
+                        <span class="review-star">
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-regular fa-star-half-stroke"></i>
+                            <i class="fa-regular fa-star"></i>
+                        </span>
+                        <span class="write-review">Write a review</span>
+                    </div>
+                    <div class="review-container">
+
+                        <div class="review-form">
+                            <h4 class="review-title">
+                                Write a review
+                            </h4>
+                            <form class="review-form-input" action="#" method="post">
+                                <div class="review-input">
+                                    <input type="text" id="name" class="name" placeholder="Enter your name" value>
+                                    <p class="error error-name"></p>
+                                </div>
+                                <div class="review-input">
+                                    <input type="text" id="email" class="email" placeholder="john.@example.com" value>
+                                    <p class="error error-email"></p>
+                                </div>
+                                <span class="rating">
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </span>
+                                <div class="review-input">
+                                    <input type="text" id="title" class="title" placeholder="Give your review a title" value>
+                                    <p class="error error-title"></p>
+                                </div>
+                                <div class="review-comment">
+                                    <textarea name="comment" id="form-comment" rows="10"
+                                        placeholder="Write your comments here (500)"></textarea>
+                                    <p class="error error-comment"></p>
+                                </div>
+                                <div class="button-submit">
+                                    <button type="submit" class="btn">Submit review</button>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="review-post">
+                            <span class="review-star">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-regular fa-star-half-stroke"></i>
+                                <i class="fa-regular fa-star"></i>
+                            </span>
+                            <div class="review-header">
+                                <div class="review-name">
+                                    <h6> Sed elementum tempus egestas</h6>
+                                </div>
+                                <div class="review-date">
+                                    <p><b>Brinley</b> on <b>Mar 27, 2022</b></p>
+                                </div>
+                            </div>
+                            <div class="review-content">
+                                <p>Ultricies lacus sed turpis tincidunt id aliquet risus. Felis donec et odio
+                                    pellentesque
+                                    diam.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
+
         </main>
 
         <div class="modal-cart">
