--- a/pages.html
+++ b/pages.html
@@ -291,7 +291,7 @@
                             bibendum sodales, augue velit cursus nunc.</p>
                     </div>
                     <div class="page-box-button col-6 col-md-4">
-                        <a href="#" class="page-box-btn">Shop Now</a>
+                        <a href="#" class="page-box-btn"><span>Shop Now</span></a>
                     </div>
                 </div>
             </div>
