--- a/account.html
+++ b/account.html
@@ -158,12 +158,12 @@
 
         <main>
             <div class="index-header">
-                <div class="account-header">
-                    <h1 class="account-heading">Account</h1>
+                <div class="bg-header">
+                    <h1 class="heading">Account</h1>
                     <div class="path">
                         <a href="index.html" class="back-to-home">Home</a>
                         <span>/</span>
-                        <span class="page-account">Account</span>
+                        <span class="page">Account</span>
                     </div>
                 </div>
             </div>
