--- a/blog.html
+++ b/blog.html
@@ -157,12 +157,12 @@
         </header>
         <main>
             <div class="index-header">
-                <div class="blog-header">
-                    <h1 class="blog-heading">Blog</h1>
+                <div class="bg-header">
+                    <h1 class="heading">Blog</h1>
                     <div class="path">
                         <a href="index.html" class="back-to-home">Home</a>
                         <span>/</span>
-                        <span class="page-blog">Blog</span>
+                        <span class="page">Blog</span>
                     </div>
                 </div>
             </div>
