--- a/contact.html
+++ b/contact.html
@@ -158,12 +158,12 @@
 
         <main>
             <div class="index-header">
-                <div class="contact-header">
-                    <h1 class="contact-heading">Contact</h1>
+                <div class="bg-header">
+                    <h1 class="heading">Contact</h1>
                     <div class="path">
                         <a href="index.html" class="back-to-home">Home</a>
                         <span>/</span>
-                        <span class="page-contact">Contact</span>
+                        <span class="page">Contact</span>
                     </div>
                 </div>
             </div>
