--- a/product-detail.html
+++ b/product-detail.html
@@ -159,12 +159,12 @@
 
         <main>
             <div class="index-header">
-                <div class="details-header">
-                    <h1 class="details-heading">Product Details</h1>
+                <div class="bg-header">
+                    <h1 class="heading">Product Details</h1>
                     <div class="path">
                         <a href="index.html" class="back-to-home">Home</a>
                         <span>/</span>
-                        <span class="page-details">Product Details</span>
+                        <span class="page">Product Details</span>
                     </div>
                 </div>
             </div>
