--- a/pages.html
+++ b/pages.html
@@ -158,12 +158,12 @@
 
         <main>
             <div class="index-header">
-                <div class="pages-header">
-                    <h1 class="page-heading">About</h1>
+                <div class="bg-header">
+                    <h1 class="heading">About</h1>
                     <div class="path">
                         <a href="index.html" class="back-to-home">Home</a>
                         <span>/</span>
-                        <span class="page-about">About</span>
+                        <span class="page">About</span>
                     </div>
                 </div>
             </div>
