--- a/product.html
+++ b/product.html
@@ -158,12 +158,12 @@
 
         <main>
             <div class="index-header">
-                <div class="product-header">
-                    <h1 class="product-heading">Products</h1>
+                <div class="bg-header">
+                    <h1 class="heading">Products</h1>
                     <div class="path">
                         <a href="index.html" class="back-to-home">Home</a>
                         <span>/</span>
-                        <span class="page-product">Products</span>
+                        <span class="page">Products</span>
                     </div>
                 </div>
             </div>
