--- a/register.html
+++ b/register.html
@@ -162,17 +162,25 @@
         <main>
             <div class="index-header">
                 <div class="bg-header">
-                    <h1 class="heading" data-aos="fade-right" data-aos-duration="1000">Account</h1>
+                    <h1 class="heading" data-aos="fade-right" data-aos-duration="1000">Create Account</h1>
                     <div class="path" data-aos="fade-left" data-aos-duration="2000">
                         <a href="index.html" class="back-to-home">Home</a>
                         <span>/</span>
-                        <span class="page">Account</span>
+                        <span class="page">Create Account</span>
                     </div>
                 </div>
             </div>
             <div class="container">
-                <div class="account">
-                    <form action="#" class="form-login" method="post" data-aos="fade-up" data-aos-duration="1500">
+                <div class="register">
+                    <form action="#" class="form-register" method="post" data-aos="fade-up" data-aos-duration="1500">
+                        <div class="form-input">
+                            <input type="text" id="firstname" class="firstname" placeholder="First Name" value>
+                            <p class="error error-firstname"></p>
+                        </div>
+                        <div class="form-input">
+                            <input type="text" id="lastname" class="lastname" placeholder="Last Name" value>
+                            <p class="error error-lastname"></p>
+                        </div>
                         <div class="form-input">
                             <input type="text" id="email" class="email" placeholder="Email" value>
                             <p class="error error-email"></p>
@@ -182,11 +190,11 @@
                             <p class="error error-password"></p>
                         </div>
                         <div class="button-submit">
-                            <button type="submit" class="btn">SIGN IN</button>
+                            <button type="submit" class="btn">CREATE ACCOUNT</button>
                         </div>
                         <div class="link-wrapper">
-                            <div class="create-account">
-                                <a href="register.html">Create account</a>
+                            <div class="login">
+                                <a href="account.html">Sign In</a>
                             </div>
                             <div data-aos="fade-right" data-aos-duration="1000">
                                 <p class="forgot"><a href="#">Forgot your password?</a></p>
@@ -403,7 +411,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="./asset/js/main.js"></script>
-    <script src="./asset/js/account.js"></script>
+    <script src="./asset/js/register.js"></script>
 </body>
 
 </html>
